<resources>
    <string name="app_name">calculator</string>
    <string name="click_me">Click Me!</string>
    <string name="divide">/</string>
    <string name="Multiply">*</string>
    <string name="Substract">-</string>
    <string name="c">C</string>
    <string name="equal">=</string>
    <string name="addition">+</string>
    <string name="seven">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
</resources>